--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "node devscripts/convertToJson.js"
   },
   "devDependencies": {
+    "husky": "^9.0.11",
     "pre-commit": "^1.2.2"
   },
   "pre-commit": [
