--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   },
   "devDependencies": {
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "pre-commit": "^1.2.2"
+  },
+  "lint-staged": {
+    "ja.js": [
+      "npm run deploy",
+      "git add ja.json"
+    ]
   }
 }
