--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,mjs}": [
-      "npx gulp --gulpfile gulpfile.mjs",
+      "yarn exec gulp --gulpfile gulpfile.mjs default",
       "git add ."
     ]
   },
